Fix misaligned nav

--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -41,7 +41,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         line-height: 3rem;
-        padding: 0.5rem 3rem 0.5rem 0.5rem;
+        padding: 0.5rem 1.5rem 0.5rem 0.5rem;
     }
 
     &.row nav.center-nav {
